Remove multipart file upload components and update storage paths
Eliminated multipart file upload service, DTOs, and related templates. Updated storage configurations for clearer separation of user roles. Adjusted authentication utility calls for improved accuracy.